# ericsson-programozo-bajnoksag-2017

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.am  Makefile.in  README.md  adddir.memo  config.h.in  configure  configure.ac  configure.scan  genscript.sh  output  script  strategy.memo
protokoll/: .gitignore  Bugfix.capnp  CMakeLists.txt  Command.capnp  Common.capnp  Makefile.am  Makefile.in  Request.capnp  Response.capnp
scripts/: include.m4  library.m4  monday.m4  sunday.m4
src/: CMakeLists.txt  backtrack.cpp  client.cpp  engine.cpp  engine.h  interface.cpp  interface.h  keyboard.cpp  liner.cpp  logintest.cpp  main.cpp  main.h  messaging.cpp  messaging.h  scripted.cpp  sequential.cpp  shapes.cpp  splitter.cpp  squareer.cpp  test.cpp
tools/: commit-on.sh  merge.sh
tools/fork_db/: master
