AC_PREREQ([2.69])
AC_INIT([binarycats-ericsson_programozasi_bajnoksag-2017], [1.0], [lezsakdomi1+binarycats@gmail.com])
AM_INIT_AUTOMAKE([binarycats-ericsson_programozasi_bajnoksag-2017], [1.0])

AC_CONFIG_SRCDIR([protokoll])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CXX
AC_LANG(C++)

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_UINT16_T
AC_TYPE_UINT8_T

# Checks for library functions.

CXXFLAGS="-std=c++11"

AC_CONFIG_FILES([Makefile
                 protokoll/Makefile])

AC_OUTPUT
